// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Icon Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1ab8kls"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    <svg>
      home.svg
    </svg>
  </button>
</div>
`;

exports[`Storyshots Button Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-mc1bqb"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </button>
</div>
`;

exports[`Storyshots Button.Color Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-mc1bqb"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-51kdvk"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-1jtpy6j"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Primary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1lq15mw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-14o5sa6"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-jcw9dv"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Secondary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-boshfe"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1qzj5ml"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-15tu6ha"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Shape Circle 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-17ar7ag"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    DEFAULT
  </button>
  <button
    className="css-1ovk79p"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    PRIMARY
  </button>
  <button
    className="css-gq9y2o"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-mc1bqb"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1lq15mw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-boshfe"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Rounded 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-eivf48"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    DEFAULT
  </button>
  <button
    className="css-vnn5kn"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    PRIMARY
  </button>
  <button
    className="css-1jkolc3"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.State Disabled 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-mc1bqb"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1lq15mw"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-boshfe"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-51kdvk"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-14o5sa6"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-1qzj5ml"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-1jtpy6j"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-jcw9dv"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-15tu6ha"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.State Loading 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1xbd4nz"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1bxn4hu"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-bu6a4x"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-1ylwk8q"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-jurg9a"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1833d7i"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-5n00wf"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1rynzxc"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-1qhv4d2"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="-loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.Variant Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-mc1bqb"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1lq15mw"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-boshfe"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-51kdvk"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-14o5sa6"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-1qzj5ml"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1jtpy6j"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-jcw9dv"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-15tu6ha"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Checkbox Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-o5ca3n"
      color="default"
      shape="default"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1r87z78"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-t9y9yf"
      color="default"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Primary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fm4qut"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fpuydv"
      color="primary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Secondary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-gmlotw"
      color="secondary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-8m07x2"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Circle 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-t9y9yf"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fpuydv"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-8m07x2"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Rounded 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1r87z78"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1fm4qut"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-gmlotw"
      color="secondary"
      shape="rounded"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-f9z9cs"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rfrqyw"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1f54ji6"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Expansion Panel Live Props 1`] = `
<div
  className="css-14973vb"
>
  <header
    className="css-jgle3q"
  >
    <h2>
      Expansion Title
    </h2>
    <button
      className="css-txa8mp"
      color="default"
      disabled={false}
      onClick={[Function]}
      shape="default"
    >
      <svg
        className="-minus"
      >
        minus.svg
      </svg>
    </button>
  </header>
  <section
    className="css-17jzza4"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
  </section>
</div>
`;

exports[`Storyshots Expansion Panel Multi Expansion Panel 1`] = `
<div
  className="css-14973vb"
>
  <header
    className="css-jgle3q"
  >
    <h2>
      Expansion Title
    </h2>
    <button
      className="css-txa8mp"
      color="default"
      disabled={false}
      onClick={[Function]}
      shape="default"
    >
      <svg
        className="-plus"
      >
        plus.svg
      </svg>
    </button>
  </header>
  <section
    className="css-17jzza4"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
  </section>
  <header
    className="css-jgle3q"
  >
    <h2>
      Expansion Title
    </h2>
    <button
      className="css-txa8mp"
      color="default"
      disabled={false}
      onClick={[Function]}
      shape="default"
    >
      <svg
        className="-minus"
      >
        minus.svg
      </svg>
    </button>
  </header>
  <section
    className="css-17jzza4"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
  </section>
  <header
    className="css-jgle3q"
  >
    <h2>
      Expansion Title
    </h2>
    <button
      className="css-txa8mp"
      color="default"
      disabled={false}
      onClick={[Function]}
      shape="default"
    >
      <svg
        className="-plus"
      >
        plus.svg
      </svg>
    </button>
  </header>
  <section
    className="css-17jzza4"
    onTransitionEnd={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
  </section>
</div>
`;

exports[`Storyshots Radio Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-jx7de8"
      color="default"
      shape="circle"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Radio.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1g6ep1u"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-qag0s"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-n162tc"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Switch Live Props 1`] = `
<div
  className="css-14973vb"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="6dc9c42d-c8d7-4141-9891-01e598baa5b8"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1c33lry"
    color="default"
    htmlFor="6dc9c42d-c8d7-4141-9891-01e598baa5b8"
  />
  Change my appearance from 
  <strong>
    "Knobs"
  </strong>
   tab
</div>
`;

exports[`Storyshots Switch.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="a905bd7f-e41e-416b-a0a0-355861bb1b5c"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1ocxwjk"
    color="default"
    htmlFor="a905bd7f-e41e-416b-a0a0-355861bb1b5c"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="55a4570c-b6d9-4714-bdce-a89dbec5427d"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-17qymiv"
    color="primary"
    htmlFor="55a4570c-b6d9-4714-bdce-a89dbec5427d"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="34fc0fd2-d1ce-4b90-bb8f-d440efbcdc6b"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1dz42om"
    color="secondary"
    htmlFor="34fc0fd2-d1ce-4b90-bb8f-d440efbcdc6b"
  />
</div>
`;

exports[`Storyshots Switch.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="76bfcf9a-cb5b-4651-8439-481b11428069"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1ocxwjk"
    color="default"
    htmlFor="76bfcf9a-cb5b-4651-8439-481b11428069"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="f41e7bdf-b0b3-4c9c-859e-bfd8164b1af2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-17qymiv"
    color="primary"
    htmlFor="f41e7bdf-b0b3-4c9c-859e-bfd8164b1af2"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="fe68442d-50b3-4961-bb45-97b97687d054"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1dz42om"
    color="secondary"
    htmlFor="fe68442d-50b3-4961-bb45-97b97687d054"
  />
</div>
`;

exports[`Storyshots Switch.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="2b7cc660-c63c-4fc4-968e-9b3d42bc9436"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1ocxwjk"
    color="default"
    htmlFor="2b7cc660-c63c-4fc4-968e-9b3d42bc9436"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="e3bdb55e-3797-45a8-bdef-7915230a9170"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-17qymiv"
    color="primary"
    htmlFor="e3bdb55e-3797-45a8-bdef-7915230a9170"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="4cc01faa-5351-46c5-8363-375351e735ea"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1dz42om"
    color="secondary"
    htmlFor="4cc01faa-5351-46c5-8363-375351e735ea"
  />
</div>
`;
